// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parts: Sticker renders correctly with all props 1`] = `
<div
  className="part-sticker "
>
  <small>
    Amount
  </small>
  <div
    className="src__DataContainer-traaidmark-konstruct__sc-1e9ad0h-0 bYmqgt"
    size="default"
  >
    <i>
      usd
    </i>
    <strong>
      2300.00
    </strong>
  </div>
</div>
`;

exports[`Parts: Sticker renders correctly without any props 1`] = `
<div
  className="part-sticker "
>
  <div
    className="src__DataContainer-traaidmark-konstruct__sc-1e9ad0h-0 bYmqgt"
    size="default"
  >
    
    <strong>
      N/A
    </strong>
  </div>
</div>
`;
